--- a/Database/MainWindow.xaml
+++ b/Database/MainWindow.xaml
@@ -11,6 +11,7 @@
             <ColumnDefinition Width="43*"/>
             <ColumnDefinition Width="89*"/>
         </Grid.ColumnDefinitions>
+        <Button Content="See Assets" HorizontalAlignment="Left" Margin="39,-105,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
 
     </Grid>
 </Window>
