--- a/Database/MainWindow.xaml
+++ b/Database/MainWindow.xaml
@@ -6,12 +6,15 @@
         xmlns:local="clr-namespace:Database"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid Margin="0,156,0,0">
+    <Grid x:Name="DataBob" Margin="0,156,0,0">
+
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="43*"/>
             <ColumnDefinition Width="89*"/>
         </Grid.ColumnDefinitions>
-        <Button Content="See Assets" HorizontalAlignment="Left" Margin="39,-105,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Button Content="See Assets" HorizontalAlignment="Left" Margin="39,-119,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click" Height="21"/>
+        <TextBox  x:Name="DataBox" Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="122" Margin="236,-146,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="360" TextChanged="TextBox_TextChanged"/>
+        <Button Content="Employees" HorizontalAlignment="Left" Margin="39,-63,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
 
     </Grid>
 </Window>
